2004-08-26 Alain Magloire
	Be on the same length as the Java Editor and Ant Editor
	for the Preference page.  Misc warning removes, when
	raising the level of warnings from the compiler.

	* src/org/eclipse/cdt/internal/ui/preference/CEditorPreferencePage.java
	* src/org/eclipse/cdt/internal/ui/preference/PreferencesMessages.properties

2004-08-25 Chris Wiebe

	better handling of enclosing type
	* src/org/eclipse/cdt/internal/ui/wizards/classwizard/NewClassCreationWizardPage.java
	* src/org/eclipse/cdt/internal/ui/wizards/classwizard/NewClassCreationWizardMessages.properties
	* src/org/eclipse/cdt/internal/ui/wizards/classwizard/AbstractMethodStub.java
	* src/org/eclipse/cdt/internal/ui/wizards/classwizard/ConstructorMethodStub.java
	* src/org/eclipse/cdt/internal/ui/wizards/classwizard/DestructorMethodStub.java
	* src/org/eclipse/cdt/internal/ui/wizards/classwizard/IMethodStub.java
	* src/org/eclipse/cdt/internal/ui/wizards/classwizard/NewClassCodeGenerator.java
	* src/org/eclipse/cdt/internal/ui/wizards/NewClassCreationWizard.java

2004-08-25 Chris Wiebe

	support for matching enclosed type names
	* browser/org/eclipse/cdt/internal/ui/browser/typehierarchy/OpenTypeHierarchyAction.java
	* src/org/eclipse/cdt/internal/ui/editor/AddIncludeOnSelectionAction.java

2004-08-25 Chris Wiebe

	Got rid of little 'C' icons on the editor preference pages
	* src/org/eclipse/cdt/internal/ui/preferences/CEditorPreferencePage.java

2004-08-25 Alain Magloire

	Fix for 65761: Show all the include paths in the includes container.

	* src/org/eclipse/cdt/internal/ui/BaseCElementContentProvider.java
	* src/org/eclipse/cdt/internal/ui/cview/CViewContentProvider.java
	* src/org/eclipse/cdt/internal/ui/cview/CViewLabelProvider.java
	* src/org/eclipse/cdt/internal/ui/cview/IncludeRefContainer.java

2004-08-25 Chris Wiebe

	Got rid of little 'C' icons on the editor preference pages
	* src/org/eclipse/cdt/internal/ui/preferences/CEditorPreferencePage.java

2004-08-25 Chris Wiebe
